@@ -51,6 +51,22 @@
 			sites don't bother filtering outgoing connections,  this configuration step is usually not necessary.</p>
     <p><a href="../workshop/specifics.html#firewall">Workshop-specific  instructions</a>.</p>
 
+    <h3>If systemd(8) Is Used</h4>
+    If the file <code>/etc/systemd/logind.conf</code> exists and contains the parameter
+    <code>RemoveIPC</code>, then ensure that its value is <code>no</code> and that it's not
+    commented-out, i.e.,
+    <blockquote>
+        <code>RemoveIPC=no</code>
+    </blockquote>
+    Then execute the command
+    <blockquote>
+        <code>systemctl restart systemd-logind</code>.
+    </blockquote>
+    
+    This is necessary to ensure that <code>systemd(8)</code> doesn't delete a shared-memory segment
+    that the LDM uses whenever the LDM user logs out (such as when a <code>crontab(1)</code> job
+    terminates, for example).
+
     <h2 id="ldm-user">Steps to Perform as the LDM User</h2>
     <h3 id="profile">Edit the <a href="glindex.html#LDM_user">LDM user</a>'s profile-file</h3>
     <p>As the LDM user, add the following entries to the appropriate login profile-file of the
