@@ -1,4 +1,9 @@
 6.14.5.1
+    Documentation:
+        * Added requirement that "RemoveIPC" in "/etc/systemd/logind.conf" must be "no" to
+          prevent systemd(8) from deleting the LDM's shared-memory segment that contains the
+          upstream LDM database.
+
     CHANGE_LOG:
         * Consolidated 6.14.4.* entries into 6.14.4.
 
